k8s/bank-receiver-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-receiver-app
spec:
  selector:
    app: bank-receiver-app
  ports:
    - port: 27018
      targetPort: 4200
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-receiver-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-receiver-app
  template:
    metadata:
      labels:
        app: bank-receiver-app
    spec:
      containers:
        - name: bank-receiver-app
          image: benisson/bank-receiver-app:0.0.1
          ports:
            - containerPort: 4200
