k8s/bank-receiver-consent-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-receiver-consent-db
spec:
  selector:
    app: bank-receiver-consent-db
  ports:
    - port: 3307
      targetPort: 3306
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-receiver-consent-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-receiver-consent-db
  template:
    metadata:
      labels:
        app: bank-receiver-consent-db
    spec:
      containers:
        - name: bank-receiver-consent-db
          image: mysql:5.7
          ports:
            - containerPort: 3306
            - containerPort: 3307
      restartPolicy: Always
