k8s/bank-receiver-consents-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-receiver-consents-api
spec:
  selector:
    app: bank-receiver-consents-api
  ports:
    - port: 3334
      targetPort: 3334
  type: LoadBalancer
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-receiver-consents-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-receiver-consents-api
  template:
    metadata:
      labels:
        app: bank-receiver-consents-api
    spec:
      containers:
        - name: app
          image: benisson/bank-receiver-consents-api:0.0.1
          ports:
            - containerPort: 3334
          imagePullPolicy: Always
      restartPolicy: Always
