k8s/bank-transmitter-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-transmitter-app
spec:
  selector:
    app: bank-transmitter-app
  ports:
    - port: 4201
      targetPort: 4201
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-transmitter-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-transmitter-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bank-transmitter-app
    spec:
      containers:
        - name: bank-transmitter-app
          image: benisson/bank-transmitter-app:0.0.2       
          ports:
            - containerPort: 4201
      restartPolicy: Always
