k8s/bank-transmitter-consents-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-transmitter-consents-api
spec:
  selector:
    app: bank-transmitter-consents-api
  ports:
    - port: 3333
      targetPort: 3333
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-transmitter-consents-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-transmitter-consents-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bank-transmitter-consents-api
    spec:
      containers:
        - name: bank-transmitter-consents-api
          image: benisson/bank-transmitter-consents-api:0.0.1          
          ports:
            - containerPort: 3333
      restartPolicy: Always
