k8s/bank-transmitter-data-provider.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-transmitter-data-provider
spec:
  ports:
    - port: 3335
      targetPort: 3335
  selector:
    app: bank-transmitter-data-provider
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-transmitter-data-provider
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-transmitter-data-provider
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bank-transmitter-data-provider
    spec:
      containers:
        - name: bank-transmitter-data-provider
          image: benisson/bank-transmitter-data-provider:0.0.1
          ports:
            - containerPort: 3335
      restartPolicy: Always
